[tool.poetry]
name = "reddit-grabber"
version = "0.1.0"
description = ""
authors = ["Arthur Asylgareev <arthur@asylgareev.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
imagehash = "^4.1.0"
requests = "^2.24.0"
praw = "^7.1.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
