[tool.poetry]
name = "telegram-voter"
version = "0.1.0"
description = ""
authors = ["Arthur Asylgareev <arthur@asylgareev.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
